--- a/src/app/shared/components/form/form-field.component.scss
+++ b/src/app/shared/components/form/form-field.component.scss
@@ -53,6 +53,7 @@
       align-items: center;
       top: 0;
       height: 100%;
+      color: black;
     }
     > .suffix-wrapper {
       right: 0.1rem;
