- use BreakpointObserverService.isMobile$ instead of query - added FaqComponent (still unfinished) - added FilterDirective and FilterItemDirective to help filter items without array (html only) - fixed typo "itens" to "items"

--- a/src/app/header/side-menu/side-menu.component.html
+++ b/src/app/header/side-menu/side-menu.component.html
@@ -10,7 +10,7 @@
   <!--TODO add better Leaderboards layout to support mobile, for now it's disabled-->
   <a
     bioListItem
-    *ngIf="isSmallScreen"
+    *ngIf="!isMobile"
     routerLink="/score/leaderboards"
     queryParamsHandling="preserve"
     (click)="onMenuSelected($event)"
