--- a/src/app/faq/faq.component.html
+++ b/src/app/faq/faq.component.html
@@ -75,7 +75,7 @@
       <li>
         If your partner approves your score:
         <a class="inherit" [routerLink]="[]" fragment="what-happens-when-my-score-is-approved-by-my-partner">
-          What happens when my score is approved by my patner?
+          What happens when my score is approved by my partner?
         </a>
       </li>
       <li>
@@ -101,29 +101,53 @@
     accordionTitle="What happens when my score is approved by an admin?"
     id="what-happens-when-my-score-is-approved-by-an-admin"
   >
+    Your score will be visible to anyone, and will enter the Leaderboards.
   </bio-accordion-item>
   <bio-accordion-item
     bioFilterItem
     accordionTitle="What happens when my score is rejected by an admin?"
     id="what-happens-when-my-score-is-rejected-by-an-admin"
   >
+    We will try our best to never do this, but if your score gets rejected, will you have to submit another one.
   </bio-accordion-item>
   <bio-accordion-item
     bioFilterItem
     accordionTitle="What happens when an admin request changes to my score?"
     id="what-happens-when-an-admin-request-changes-to-my-score"
   >
+    You'll need to change your score and it will by re-submitted to approval.
+    <br />
+    <small>This is what we will always try to do instead of rejecting the score.</small>
   </bio-accordion-item>
   <bio-accordion-item
-    accordionTitle="What happens when my score is approved by my patner?"
+    accordionTitle="What happens when my score is approved by my partner?"
     id="what-happens-when-my-score-is-approved-by-my-partner"
-  ></bio-accordion-item>
+  >
+    Your score will be sent to the approval of the admins.
+  </bio-accordion-item>
   <bio-accordion-item
     accordionTitle="What happens when my score is rejected by my partner?"
     id="what-happens-when-my-score-is-rejected-by-my-partner"
-  ></bio-accordion-item>
+  >
+    You'll need to submit your score again.
+  </bio-accordion-item>
   <bio-accordion-item
     accordionTitle="What do I need to do when my partner request a change in my score?"
     id="what-do-i-need-to-do-when-my-partner-request-a-change-in-my-score"
-  ></bio-accordion-item>
+  >
+    You'll need to change your score and it will by re-submitted to approval of your partner.
+  </bio-accordion-item>
+  <bio-accordion-item accordionTitle="Why do we need this approval system?" id="why-do-we-need-this-approval-system">
+    The in-game leaderboards (when existent) are full of cheaters, most of the scores are 999.999.999 or 2.147.483.647,
+    <br />
+    so, with this approval system, we can filter legit scores, and have a clean leaderboards for all games
+  </bio-accordion-item>
+  <bio-accordion-item accordionTitle="Why would my score be rejected?" id="why-would-my-score-be-rejected">
+    There are 2 main reasons for that:
+    <ol>
+      <li>If your score is proven to be cheated</li>
+      <li>If you don't provide enough evidence for your score</li>
+    </ol>
+    But you can read the <a class="inherit" routerLink="/rules">rules here.</a>
+  </bio-accordion-item>
 </bio-accordion>
