- optimized imports and exports to reduce bundle size

--- a/src/app/shared/components/accordion/accordion-item.component.html
+++ b/src/app/shared/components/accordion/accordion-item.component.html
@@ -15,7 +15,7 @@
     <icon [@collapseIcon]="expanded ? 'expanded' : 'collapsed'">expand_less</icon>
   </div>
 </div>
-<div class="accordion-item-body" [bioCollapsed]="!expanded" [bioExpanded]="expanded">
+<div class="accordion-item-body" [bioCollapsed]="!expanded">
   <div class="accordion-item-content">
     <ng-content></ng-content>
   </div>
