- added rules page (closes #13) - added admin rules page (to edit rules) - made properties in the AuthQuery readonly - changed footer github stlmpp to routerLink stlmpp - fixed import StMapView - removed some unused pipes - fixed label not getting in danger state in the form field - added missing @Input() in the LabelDirective - added UnsavedDataGuard - added more h's to the selector of PageTitleComponent - removed UtilModule (was unused) - fixed max-height on mobiles

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -5,6 +5,4 @@
   <a bioButton small routerLink="/contact">Contact</a>
   <a bioButton small href="https://www.buymeacoffee.com/stlmpp">Buy me a coffee</a>
 </div>
-<div class="end" *ngIf="!mobile">
-  Powered by <a class="white" [href]="github">{{ poweredBy }}</a> {{ copyright }}
-</div>
+<div class="end" *ngIf="!mobile">Powered by <a class="white" routerLink="/stlmpp">stLmpp</a> {{ copyright }}</div>
