--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -5,6 +5,9 @@
   display: grid;
   grid-template-rows: auto 1fr auto;
   min-height: 100vh;
+  @media only screen and (max-width: v.$mobile-width) {
+    min-height: stretch;
+  }
 }
 
 main {
