--- a/src/styles/_form.scss
+++ b/src/styles/_form.scss
@@ -59,3 +59,8 @@ input.no-arrows {
   font-size: 0.65rem;
   color: v.$danger;
 }
+
+label.required::after {
+  content: '*';
+  margin-left: 0.15rem;
+}
