--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -2,6 +2,7 @@
 $radius: 4px;
 
 // Colors
+$black: black;
 $white: white;
 $light: #e7e7e7;
 $light-grey: #d0d0d0;
@@ -95,6 +96,7 @@ $success-500: map-get($success-pallete, 500);
 $success-600: map-get($success-pallete, 600);
 
 $mobile-width: 599px;
+$medium-screen-width: 768px;
 $big-screen-width: 1200px;
 $header-height: 64px;
 $footer-height: 64px;
