- removed many pipes, since @stlmpp/utils now has those pipes - replace NgLetDirective with @stlmpp/utils ng let - replace whiteSpace validator with @stlmpp/control whiteSpace

--- a/src/app/shared/params/params.component.html
+++ b/src/app/shared/params/params.component.html
@@ -138,9 +138,7 @@
         <bio-option disabled *ngIf="state.characterLoading"><spinner [size]="0.1"></spinner> Loading...</bio-option>
         <bio-option
           [value]="null"
-          *ngIf="
-            (formsConfig.idCharacterCostume.clearable ?? state.clearable) && !!(idCharacterCostume$ | async)
-          "
+          *ngIf="(formsConfig.idCharacterCostume.clearable ?? state.clearable) && !!(idCharacterCostume$ | async)"
         >
           Clear
         </bio-option>
