- disabled vendorChunk - updated @stlmpp - added Edit Rules menu - fixed scroll side-menu - use the new ValidatorsKeys from @stlmpp/control

--- a/src/app/header/side-menu/side-menu.component.html
+++ b/src/app/header/side-menu/side-menu.component.html
@@ -65,4 +65,8 @@
     <icon prefix>person_add_alt_1</icon>
     Create player
   </a>
+  <a bioListItem routerLink="/admin/rules" (click)="onMenuSelected($event)" *ngIf="user.admin">
+    <icon prefix>article</icon>
+    Edit rules
+  </a>
 </bio-list>
