--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -3,6 +3,6 @@
   <a bioButton small routerLink="/faq">FAQ</a>
   <a bioButton small routerLink="/rules">Rules</a>
   <a bioButton small routerLink="/contact">Contact</a>
-  <a bioButton small href="https://www.buymeacoffee.com/stlmpp">Buy me a coffee</a>
+  <a bioButton small routerLink="/stlmpp" fragment="support">Buy me a coffee</a>
 </div>
 <div class="end" *ngIf="!mobile">Powered by <a class="white" routerLink="/stlmpp">stLmpp</a> {{ copyright }}</div>
