- fix typo leaderbords --> leaderboards (closes #30)

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -7,7 +7,7 @@
     </a>
     <a class="block" tabindex="0" routerLink="/score/leaderboards">
       <icon>leaderboard</icon>
-      Check the leaderbords
+      Check the leaderboards
     </a>
     <ng-container *ngIf="isAdmin$ | async">
       <a
