- added AdminMailQueueComponent (closes #31)

--- a/src/app/header/side-menu/side-menu.component.html
+++ b/src/app/header/side-menu/side-menu.component.html
@@ -69,4 +69,8 @@
     <icon prefix>article</icon>
     Edit rules
   </a>
+  <a bioListItem routerLink="/admin/mail-queue" (click)="onMenuSelected($event)" *ngIf="user.admin">
+    <icon prefix mdi="email-sync-outline"></icon>
+    Mail queue
+  </a>
 </bio-list>
