--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -5,7 +5,7 @@
       <icon>add</icon>
       Submit a score
     </a>
-    <a class="block" tabindex="0" routerLink="/score/leaderboards">
+    <a class="block" tabindex="0" routerLink="/score/leaderboards" *ngIf="isNotMobile$ | async">
       <icon>leaderboard</icon>
       Check the leaderboards
     </a>
