--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -59,7 +59,7 @@
           <errors>
             <error *error="'required'">Password is required</error>
             <error *error="'minLength'; let error">Password must have at least {{ error.required }} characters</error>
-            <error *error="'sibblingEquals'">Passwords does't match</error>
+            <error *error="'siblingEquals'">Passwords doesn't match</error>
           </errors>
         </form-field>
       </ng-template>
