--- a/src/app/player/player-change-requests/player-change-requests-modal/player-change-requests-modal.component.html
+++ b/src/app/player/player-change-requests/player-change-requests-modal/player-change-requests-modal.component.html
@@ -21,7 +21,7 @@
               </errors>
             </form-field>
             <form-field label="Bullet kills">
-              <input bioInput controlName="bulletKills" placeholder="Number of bullet kils" type="number" />
+              <input bioInput controlName="bulletKills" placeholder="Number of bullet kills" type="number" />
               <errors>
                 <error *error="'required'">Bullet kills is required</error>
               </errors>
