--- a/src/app/stlmpp/stlmpp.component.html
+++ b/src/app/stlmpp/stlmpp.component.html
@@ -15,7 +15,7 @@
       </p>
       <p>
         For a long time, the community used to have a sheet with all scores from Resident Evil 5, but it was not that
-        updated, and had a lot of flaws, because there were no (explict) regulations and the updates were dependent on
+        updated, and had a lot of flaws, because there were no (explicit) regulations and the updates were dependent on
         some people.
       </p>
       <p>
