--- a/src/app/score/score-add/score-add-player/score-add-player.component.html
+++ b/src/app/score/score-add/score-add-player/score-add-player.component.html
@@ -84,7 +84,7 @@
       </errors>
     </form-field>
     <form-field label="Bullet kills" [disabled]="disabled">
-      <input bioInput controlName="bulletKills" placeholder="Number of bullet kils" type="number" />
+      <input bioInput controlName="bulletKills" placeholder="Number of bullet kills" type="number" />
       <errors>
         <error *error="'required'">Bullet kills is required</error>
       </errors>
