- Added inputmode to confirmation code input

--- a/src/app/auth/shared/confirmation-code-input/confirmation-code-input.component.html
+++ b/src/app/auth/shared/confirmation-code-input/confirmation-code-input.component.html
@@ -11,6 +11,7 @@
       (paste)="onPaste($event)"
       placeholder="0"
       confirmationCodeInput
+      inputmode="numeric"
     />
   </div>
   <div class="errors">
