- Added autocapitalize off to username input

--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -4,7 +4,7 @@
     <bio-card-content>
       <form-field>
         <label>Username</label>
-        <input autocomplete="username" bioInput controlName="username" />
+        <input autocomplete="username" bioInput controlName="username" autocapitalize="off" />
         <errors>
           <error *error="'required'">Username is required</error>
         </errors>
