- replaced @mdi/font with @mdi/js to reduce bundle size - refactor IconMdiComponent to use the svg - refactor all components that used IconMdiComponent to import the svg from @mdi/js

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -29,7 +29,7 @@
         <button type="button" bioButton [menuTrigger]="menu">
           <icon>person</icon>
           {{ user.username }}
-          <icon class="triangle" mdi="triangle"></icon>
+          <icon class="triangle" [mdi]="mdiTriangle" [size]="8"></icon>
         </button>
         <bio-menu #menu>
           <a bioButton menuItem [routerLink]="pathToProfile$ | async"> <icon>person</icon> Profile </a>
