--- a/src/app/shared/components/list/list.component.scss
+++ b/src/app/shared/components/list/list.component.scss
@@ -34,6 +34,7 @@
       flex: auto;
       box-sizing: border-box;
       overflow: hidden;
+      justify-content: center;
       .list-item-line {
         display: block;
         white-space: nowrap;
