--- a/src/app/player/player-profile/player-profile.component.html
+++ b/src/app/player/player-profile/player-profile.component.html
@@ -25,7 +25,7 @@
         [href]="player.steamProfile.profileurl"
         tooltip="Steam profile"
       >
-        <icon mdi="steam" medium></icon>
+        <icon [mdi]="mdiSteam" medium></icon>
       </a>
     </div>
     <div bioCardSubtitle>{{ player.title }}</div>
