--- a/src/app/shared/components/accordion/accordion-item.component.scss
+++ b/src/app/shared/components/accordion/accordion-item.component.scss
@@ -9,15 +9,35 @@ $focus-background-color: lighten(v.$dark-overlay, 5);
   grid-row-gap: 1rem;
 }
 
+.accordion-item-header {
+  display: flex;
+  justify-content: space-between;
+
+  .accordion-item-icon {
+    display: flex;
+
+    .icon {
+      color: f.get-color(v.$primary-type, 600);
+    }
+  }
+}
+
+.accordion-item-header,
+.accordion-item-body .accordion-item-content {
+  padding: 1rem;
+}
+
 .accordion-item {
   display: block;
   border-radius: v.$radius;
   background-color: v.$dark-overlay;
   @include m.elevation(2);
+
   &:not(.disabled) {
     .accordion-item-header {
       cursor: pointer;
     }
+
     &:not(.expanded) {
       .accordion-item-header {
         &:hover,
@@ -28,8 +48,10 @@ $focus-background-color: lighten(v.$dark-overlay, 5);
         }
       }
     }
+
     &.expanded:focus-within {
       background-color: $focus-background-color;
+
       .accordion-item-header {
         outline: none;
       }
@@ -37,10 +59,6 @@ $focus-background-color: lighten(v.$dark-overlay, 5);
   }
 }
 
-.accordion-item-header,
-.accordion-item-body .accordion-item-content {
-  padding: 1rem;
-}
 .accordion-item-body .accordion-item-content {
   padding-top: 0;
   font-size: 0.85rem;
@@ -50,15 +68,4 @@ $focus-background-color: lighten(v.$dark-overlay, 5);
 .accordion-item-title {
   display: flex;
   align-items: center;
-}
-
-.accordion-item-header {
-  display: flex;
-  justify-content: space-between;
-  .accordion-item-icon {
-    display: flex;
-    icon {
-      color: f.get-color(v.$primary-type, 600);
-    }
-  }
 }
