--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -55,7 +55,7 @@ $accent-600: map-get($accent-pallete, 600);
 
 $danger-type: 'danger';
 $danger-pallete: (
-  0: #ff0000,
+  0: #f00,
   50: #ed1010,
   100: #dc1a1a,
   200: #d22a2a,
