--- a/src/app/score/score-shared/score-approval/score-approval.component.html
+++ b/src/app/score/score-shared/score-approval/score-approval.component.html
@@ -7,6 +7,8 @@
       (paramsChange)="updateParams($event)"
       setQueryParamsOnChange
       clearable
+      approval
+      [playerMode]="playerMode"
     ></bio-params>
   </bio-card-content>
 </bio-card>
