- added missing counter to scores approval in the admin component - kind of grouped the options in the side menu (closes #39) - added missing entries in the side menu

--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,6 +1,6 @@
 <h4 bioPageTitle></h4>
 <bio-card-menus bioCardMenuFocusOnFirstItem>
-  <a bioCardMenu routerLink="approval">
+  <a bioCardMenu routerLink="approval" [bioBadge]="adminApprovalCount$ | async">
     <icon>checklist</icon>
     Score approval
   </a>
