--- a/src/styles/_icon.scss
+++ b/src/styles/_icon.scss
@@ -33,7 +33,7 @@
   -webkit-font-smoothing: antialiased;
 
   &.icon-mdi {
-    display: inline-flex;
+    display: inline-block;
 
     svg {
       width: 24px;
