- added initial components and logic to datepicker/calendar

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,8 @@
 </header>
 
 <main>
-  <router-outlet></router-outlet>
+  <bio-calendar></bio-calendar>
+  <!--<router-outlet></router-outlet>-->
 </main>
 
 <footer>
